--- a/egs/smarthome/doc/thesis/tex/sett/declaration_of_authorship.tex
+++ b/egs/smarthome/doc/thesis/tex/sett/declaration_of_authorship.tex
@@ -5,6 +5,8 @@
 \begin{declaration}
 %\addchaptertocentry{\authorshipname}
 
+\textcolor{red}{Česky, bude stačit kratší - starší bakalářky ze ZČU. Možná je dokonce oficiální, které se k textu přidá až po tisku, vyřešíme až na konci...}
+
 \noindent I, \authorname, declare that this thesis titled, \enquote{\ttitle} and the work presented in it are my own. I confirm that:
 
 \begin{itemize} 
