--- a/egs/smarthome/doc/thesis/tex/sett/lists.tex
+++ b/egs/smarthome/doc/thesis/tex/sett/lists.tex
@@ -18,9 +18,7 @@
 
 \begin{abbreviations}{ll} % Include a list of abbreviations (a table of two columns)
 
-\textbf{AI} & \textbf{A}rtificial \textbf{I}ntelligence\\
-\textbf{ANN} & \textbf{A}rtificial \textbf{N}eural \textbf{N}etwork\\
-Your abbreviations...
+\textbf{IoT} & \textbf{I}nternet \textbf{o}f \textbf{T}hings\\
 
 \end{abbreviations}
 
