--- a/egs/smarthome/doc/thesis/tex/sett/title_page.tex
+++ b/egs/smarthome/doc/thesis/tex/sett/title_page.tex
@@ -29,8 +29,9 @@
 \end{flushright}
 \end{minipage}\\[2.5cm]
  
-\large \textit{A thesis submitted in fulfillment of the requirements\\ for the degree of \degreename}\\[0.3cm] % University requirement text
-\textit{in the}\\[0.4cm]
+\large \textit{Závěrečná práce k získání akademického titulu  \degreename} \\[0.3cm] % University requirement text
+\textit{v oboru Systémy pro identifikaci, bezpečnost a komunikaci}\\[0.4cm]
+
 %\groupname
 \deptname % Research group name and department name
 %\includegraphics[width=0.35\textwidth]{kky_logo.png} 				% Department logo
