--- a/egs/smarthome/doc/thesis/main.tex
+++ b/egs/smarthome/doc/thesis/main.tex
@@ -15,9 +15,12 @@
 \mainmatter 										% Begin numeric (1,2,3...) page numbering
 \pagestyle{thesis} 									% Return the page headers back to the "thesis" style
 \include{tex/chap/chap_introduction}
-\include{tex/chap/chap_methods}
-\include{tex/chap/chap_examples}
-\include{tex/chap/chap_discussion}
+
+\include{tex/chap/chap_hardware}
+\include{tex/chap/chap_network_database}
+\include{tex/chap/chap_diagnostics}
+\include{tex/chap/chap_visualization}
+
 \include{tex/chap/chap_conclusion}
 % ------------------------------------------------------------------------------------------------------
 \input{tex/sett/bibliography}
