--- a/egs/smarthome/doc/thesis/tex/sett/preamble.tex
+++ b/egs/smarthome/doc/thesis/tex/sett/preamble.tex
@@ -26,7 +26,7 @@
 11pt, 						% The default document font size, options: 10pt, 11pt, 12pt
 oneside, 					% Two side (alternating margins) for binding by default, uncomment to switch to one side
 %chapterinoneline,			% Have the chapter title next to the number in one single line
-english, 					% ngerman for German
+czech, 					% ngerman for German
 singlespacing, 				% Single line spacing, alternatives: onehalfspacing or doublespacing
 %draft, 					% Uncomment to enable draft mode (no pictures, no links, overfull hboxes indicated)
 nolistspacing, 				% Uncomment this to set spacing in lists to single
@@ -82,7 +82,7 @@ hidelinks,
 \usepackage{amsmath}
 \usepackage{cleveref}
 \crefname{listing}{code part}{code parts}
-\crefname{figure}{Fig.}{Fig.}
+\crefname{figure}{Obr.}{Obr.}
 \crefname{table}{Table}{Tables}
 \crefname{equation}{Eq.}{Eq.}
 
