thesis chap hardware added

--- a/egs/smarthome/doc/thesis/tex/sett/preamble.tex
+++ b/egs/smarthome/doc/thesis/tex/sett/preamble.tex
@@ -83,8 +83,10 @@ hidelinks,
 \usepackage{cleveref}
 \crefname{listing}{code part}{code parts}
 \crefname{figure}{Obr.}{Obr.}
-\crefname{table}{Table}{Tables}
+\crefname{table}{Tab.}{Tab.}
 \crefname{equation}{Eq.}{Eq.}
+\crefname{section}{Kap.}{Kap.}
+
 
 \usepackage{float}
 
