--- a/egs/smarthome/doc/thesis/style/thesis_style.cls
+++ b/egs/smarthome/doc/thesis/style/thesis_style.cls
@@ -341,6 +341,7 @@ KOMA-script documentation for details.}]{fancyhdr}
 \newcommand{\abbrevname}{List of Abbreviations}
 \providecaptionname{english,british,american}{\abbrevname}{List of Abbreviations}
 \providecaptionname{ngerman,german,austrian,naustrian}{\abbrevname}{Abk\"urzungsverzeichnis}
+\providecaptionname{czech}{\abbrevname}{Použité zkratky a termíny}
 \NewDocumentEnvironment{abbreviations}{ m }{%
 	\ifbool{nolistspace}{\begingroup\singlespacing}{}
 	\ifbool{listtoc}{\addchap{\abbrevname}}{\addchap*{\abbrevname}}
