--- a/egs/smarthome/doc/thesis/tex/sett/lists.tex
+++ b/egs/smarthome/doc/thesis/tex/sett/lists.tex
@@ -17,9 +17,12 @@
 %%----------------------------------------------------------------------------------------
 
 \begin{abbreviations}{ll} % Include a list of abbreviations (a table of two columns)
-
-\textbf{IoT} & \textbf{I}nternet \textbf{o}f \textbf{T}hings\\
-
+\textbf{IoT} & \textbf{I}nternet \textbf{o}f \textbf{T}hings \\
+\textbf{RPi} & \textbf{R}aspberry \textbf{P}i \\
+\textbf{ESP8266} & Mikročip, mikrokontrolér \\
+\textbf{NodeMCU} & Vývojová platforma s čipem ESP8266 \\
+\textbf{Čidlo} & Komponenta k mikročipu (např.: teploměr DS18B20) \\
+\textbf{Senzor} & Celek skládající se z mikročipu a čidla (např.: obvod ESP8266 + DS18B20) \\
 \end{abbreviations}
 
 %%----------------------------------------------------------------------------------------
