thesis chap network and db added

--- a/egs/smarthome/doc/thesis/tex/sett/preamble.tex
+++ b/egs/smarthome/doc/thesis/tex/sett/preamble.tex
@@ -86,6 +86,7 @@ hidelinks,
 \crefname{table}{Tab.}{Tab.}
 \crefname{equation}{Eq.}{Eq.}
 \crefname{section}{Kap.}{Kap.}
+\crefname{chapter}{Kap.}{Kap.}
 
 
 \usepackage{float}
