--- a/egs/smarthome/doc/thesis/tex/sett/abstract.tex
+++ b/egs/smarthome/doc/thesis/tex/sett/abstract.tex
@@ -5,6 +5,6 @@
 \begin{abstract}
 \addchaptertocentry{\abstractname} % Add the abstract to the table of contents
 
-Your abstract goes here...
+Abstrakt text ...
 
 \end{abstract}
