--- a/egs/smarthome/doc/thesis/tex/sett/declaration_of_authorship.tex
+++ b/egs/smarthome/doc/thesis/tex/sett/declaration_of_authorship.tex
@@ -5,23 +5,25 @@
 \begin{declaration}
 %\addchaptertocentry{\authorshipname}
 
-\textcolor{red}{Česky, bude stačit kratší - starší bakalářky ze ZČU. Možná je dokonce oficiální, které se k textu přidá až po tisku, vyřešíme až na konci...}
+%Prohlašuji, že jsem tuto bakalářskou práci vypracoval samostatně pod vedením pana Ing. Martina Bulína, MSc. Veškeré použité podklady, ze kterých jsem čerpal %informace, jsou uvedeny v seznamu použité literatury a citovány v textu.
 
-\noindent I, \authorname, declare that this thesis titled, \enquote{\ttitle} and the work presented in it are my own. I confirm that:
+\vspace*{0.2\textheight}
+Prohlasuji, ze jsem tuto bakalarskou praci vypracoval samostatne pod vedením pana Ing. Martina Bulína, MSc. Veskere pouzite podklady, ze kterych jsem cerpal informace, jsou uvedeny v seznamu pouzite literatury a citovany v textu.\bigbreak
 
-\begin{itemize} 
-\item This work was done wholly or mainly while in candidature for a research degree at this University.
-\item Where any part of this thesis has previously been submitted for a degree or any other qualification at this University or any other institution, this has been clearly stated.
-\item Where I have consulted the published work of others, this is always clearly attributed.
-\item Where I have quoted from the work of others, the source is always given. With the exception of such quotations, this thesis is entirely my own work.
-\item I have acknowledged all main sources of help.
-\end{itemize}
- 
-\noindent Signed:\\
-\rule[0.5em]{25em}{0.5pt} % This prints a line for the signature
- 
-\noindent Date:\\
-\rule[0.5em]{25em}{0.5pt} % This prints a line to write the date
+\vfill
+\begin{minipage}[t]{0.45\textwidth}
+\begin{flushleft} 
+V Plzni dne {\today}
+\end{flushleft}
+\end{minipage}
+\begin{minipage}[t]{0.45\textwidth}
+\begin{flushright}
+. . . . . . . . . . . . . . . \\ 
+\vspace{3mm}
+{\authorname}
+\end{flushright}
+\end{minipage}\\[2.5cm]
+
 \end{declaration}
-
 \cleardoublepage
+
