--- a/egs/smarthome/doc/thesis/tex/sett/lists.tex
+++ b/egs/smarthome/doc/thesis/tex/sett/lists.tex
@@ -21,8 +21,8 @@
 \textbf{RPi} & \textbf{R}aspberry \textbf{P}i \\
 \textbf{ESP8266} & Mikročip, mikrokontrolér \\
 \textbf{NodeMCU} & Vývojová platforma s čipem ESP8266 \\
-\textbf{Čidlo} & Komponenta k mikročipu (např.: teploměr DS18B20) \\
-\textbf{Senzor} & Celek skládající se z mikročipu a čidla (např.: obvod ESP8266 + DS18B20) \\
+\textbf{Čidlo} & Komponenta k mikročipu (např.: vlhkoměr DHT11) \\
+\textbf{Senzor} & Celek skládající se z mikročipu a čidla (např.: obvod ESP8266 + DHT11) \\
 \end{abbreviations}
 
 %%----------------------------------------------------------------------------------------
