--- a/egs/smarthome/doc/thesis/tex/sett/quotation.tex
+++ b/egs/smarthome/doc/thesis/tex/sett/quotation.tex
@@ -4,6 +4,6 @@
 
 \vspace*{0.2\textheight}
 
-\noindent\enquote{\itshape Something supersmart.}\bigbreak
+\noindent\enquote{\itshape When Henry Ford made cheap, reliable cars, people said, ‘Nah, what’s wrong with a horse?’ That was a huge bet he made, and it worked.}\bigbreak
 
-\hfill Your hero
+\hfill Elon Musk
