--- a/egs/smarthome/doc/thesis/tex/sett/title_page.tex
+++ b/egs/smarthome/doc/thesis/tex/sett/title_page.tex
@@ -36,8 +36,7 @@
 \deptname % Research group name and department name
 %\includegraphics[width=0.35\textwidth]{kky_logo.png} 				% Department logo
  \\\vspace{2cm}
-%{\large \today} % Date
-{\large 13. března 2020} 
+{\large \today} 
  
 \vfill
 \end{center}
