thesis update and chap 4 diagnostics added

--- a/egs/smarthome/doc/thesis/bib/thesis_bibliography.bib
+++ b/egs/smarthome/doc/thesis/bib/thesis_bibliography.bib
@@ -31,3 +31,10 @@
    author 		= {Bradley, Peter},
    url 			= {http://mind.ilstu.edu/}
 }
+
+@online{online:esp8266,
+   title = {Parametry mikročipu ESP8266},
+   date = {2020},
+   url = {https://en.wikipedia.org/wiki/ESP8266}
+}
+
