--- a/egs/smarthome/doc/thesis/tex/sett/acknowledgements.tex
+++ b/egs/smarthome/doc/thesis/tex/sett/acknowledgements.tex
@@ -5,6 +5,7 @@
 \begin{acknowledgements}
 %\addchaptertocentry{\acknowledgementname} % Add the acknowledgements to the table of contents
 \vspace{1cm}
+\vspace*{0.1\textheight}
 
 Tímto bych chtěl poděkovat vedoucímu mé bakalářské práce panu \mbox{Ing. Martinu} Bulínovi, MSc. za odborné konzultace a trpělivost v průběhu celého projektu. Především za hodnotné rady a poznámky v průběhu návrhu řešení a následnou cennou zpětnou vazbu při psaní této práce. \par
 Dále děkuji panu Ing. Janu Švecovi, Ph.D za nápady při tvorbě zadání této práce. \par
