--- a/egs/smarthome/doc/thesis/tex/sett/quotation.tex
+++ b/egs/smarthome/doc/thesis/tex/sett/quotation.tex
@@ -2,7 +2,8 @@
 %	QUOTATION PAGE
 %----------------------------------------------------------------------------------------
 
-\vspace*{0.2\textheight}
+%\vspace{3cm}
+\vspace*{0.4\textheight}
 
 \noindent\enquote{\itshape When Henry Ford made cheap, reliable cars, people said, ‘Nah, what’s wrong with a horse?’ That was a huge bet he made, and it worked.}\bigbreak
 
