--- a/egs/smarthome/doc/thesis/tex/sett/abstract.tex
+++ b/egs/smarthome/doc/thesis/tex/sett/abstract.tex
@@ -5,6 +5,12 @@
 \begin{abstract}
 \addchaptertocentry{\abstractname} % Add the abstract to the table of contents
 
-Abstrakt text ...
+Cílem této bakalářské práce je zkonstruovat senzory postavené na mikročipu \textit{ESP8266}, naprogramovat systém automatické diagnostiky komunikace za účelem detekce chyb a jiných anomálií a data vizuálně zobrazit. Prvním krokem je otestování čidel vhodných pro využití v chytré domácnosti a následná konstrukce fyzických obvodů. Dále je potřeba zprovoznit komunikaci vybraných čidel s mikrokontrolérem ESP8266 a pomocí protokolu \textit{MQTT} zajistit komunikaci senzorů s webovým rozhraním. Výstupem tohoto projektu je grafická vizualizace naměřených dat ve formě webové stránky, která poskytuje kromě hodnot měřených veličin informace o stavu jednotlivých čidel. Webová stránka je napojena na systém automatické diagnostiky, který je založen na principech strojového učení a pomocí klasifikátorů detekuje anomálie.
+
+\begin{abstract_en}
+
+Aim of this bachelor thesis is to construct a few \textit{ESP8266}-based sensors and develop a tool for an automatic communication diagnostics and outlier detection. First step is to choose specific sensors, put them to test in order to determine their suitability in this project and after that we have to build an integrated circuit and develop a communication channel between the microchips and server via \textit{MQTT}. The outcome of this project is a grafical visualisation which provides an organized summary of all measured quantities and gives an overview of conditions of each sensor. This grafical visualization is implemented through a web page and gives a comprehensive view of all aspects in this projet. The web page is connected to the autonomous diagnostics system which is based on the principles of machine learning and classifies the incoming messages in order to detect anomaly. 
+
+\end{abstract_en}
 
 \end{abstract}
