--- a/egs/smarthome/doc/thesis/tex/sett/bibliography.tex
+++ b/egs/smarthome/doc/thesis/tex/sett/bibliography.tex
@@ -1,4 +1,6 @@
-\nocite{mcculloch:neuron}
+\nocite{Wikipedia:online}
+\nocite{sklearn_api}
+\nocite{Hradla-Volty:book}
 %\printbibliography[heading=bibintoc, title={Bibliography}]	
 \printbibliography[heading=bibintoc, title={Literatura}]	% Bibliography
 %\printbibheading[heading=bibintoc,title={Bibliography}]
