--- a/egs/smarthome/doc/thesis/tex/sett/keywords.tex
+++ b/egs/smarthome/doc/thesis/tex/sett/keywords.tex
@@ -5,7 +5,7 @@
 \begin{keywords_cs}
 \vspace{1cm}
 
-Internet věcí, chytrá domácnost, senzor, mikročip, ESP8266, Raspberry Pi, diagnostika komunikace, detekce anomálií, strojové učení, klasifikace, webová vizualizace
+Internet věcí, chytrá domácnost, senzor, mikročip, ESP8266, Raspberry Pi, diagnostika komunikace, detekce anomálií, Isolation Forest, webová vizualizace
 
 \vspace{1cm}
 \end{keywords_cs}
@@ -13,6 +13,6 @@ Internet věcí, chytrá domácnost, senzor, mikročip, ESP8266, Raspberry Pi, d
 \begin{keywords_en}
 \vspace{1cm}
 
-Internet of things, smart home, sensor, microchip, ESP8266, Rapberry Pi, communication diagnostics, anomaly detection, machine learning, classification, web visualisation
+Internet of things, smart home, sensor, microchip, ESP8266, Rapberry Pi, communication diagnostics, anomaly detection, Isolation Forest, web visualisation
 
 \end{keywords_en}
