--- a/egs/smarthome/doc/thesis/tex/sett/lists.tex
+++ b/egs/smarthome/doc/thesis/tex/sett/lists.tex
@@ -17,12 +17,13 @@
 %%----------------------------------------------------------------------------------------
 
 \begin{abbreviations}{ll} % Include a list of abbreviations (a table of two columns)
-\textbf{IoT} & \textbf{I}nternet \textbf{o}f \textbf{T}hings \\
+\textbf{IoT} & \textbf{I}nternet \textbf{o}f \textbf{T}hings (internet věcí)\\
 \textbf{RPi} & \textbf{R}aspberry \textbf{P}i \\
-\textbf{ESP8266} & Mikročip, mikrokontrolér \\
+\textbf{ESP8266} & Použitý mikročip (mikrokontrolér) \\
 \textbf{NodeMCU} & Vývojová platforma s čipem ESP8266 \\
 \textbf{Čidlo} & Komponenta k mikročipu (např.: vlhkoměr DHT11) \\
-\textbf{Senzor} & Celek skládající se z mikročipu a čidla (např.: obvod ESP8266 + DHT11) \\
+\textbf{Senzor} & Celek skládající se z mikročipu a čidla \\
+                          & (např.: obvod ESP8266 + DHT11)
 \end{abbreviations}
 
 %%----------------------------------------------------------------------------------------
