--- a/egs/smarthome/doc/thesis/main.tex
+++ b/egs/smarthome/doc/thesis/main.tex
@@ -26,6 +26,7 @@
 \appendix 											% Cue to tell LaTeX that the following "chapters" are Appendices
 \renewcommand{\thechapter}{A\arabic{chapter}}		% Appendices A1, A2, ...
 %\setlength{\headsep}{-1cm}
+\include{tex/appx/app_diagnostics}
 \include{tex/appx/app_structure_of_the_repository}
 % ------------------------------------------------------------------------------------------------------
 \end{document}  
