--- a/egs/smarthome/doc/thesis/bib/thesis_bibliography.bib
+++ b/egs/smarthome/doc/thesis/bib/thesis_bibliography.bib
@@ -87,19 +87,6 @@
  year={2011}
 }
 
-@inproceedings{sklearn_api,
-  author    = {Lars Buitinck and Gilles Louppe and Mathieu Blondel and
-               Fabian Pedregosa and Andreas Mueller and Olivier Grisel and
-               Vlad Niculae and Peter Prettenhofer and Alexandre Gramfort
-               and Jaques Grobler and Robert Layton and Jake VanderPlas and
-               Arnaud Joly and Brian Holt and Ga{\"{e}}l Varoquaux},
-  title     = {{API} design for machine learning software: experiences from the scikit-learn
-               project},
-  booktitle = {ECML PKDD Workshop: Languages for Data Mining and Machine Learning},
-  year      = {2013},
-  pages = {108--122},
-}
-
 @book{Hradla-Volty:book,
 author = {Martin Malý},
 title = {HRADLA, VOLTY, JEDNOČIPY Úvod do bastlení},
@@ -120,4 +107,29 @@ author = {Antonín Vojáček},
 year = {2017},
 organization = {HW server s.r.o.},
 urldate = {2020},
+}
+
+@manual{BME280:Datasheet,
+	url = {https://ae-bst.resource.bosch.com/media/_tech/media/datasheets/BST-BME280-DS002.pdf},
+	organization = {Bosch Sensortec GmbH},
+	version = {1.6_092018},
+	year = {2018},
+	note = {BST-BME280-DS002-15, 0 273 141 185},
+	title = {BME280 Combined humidity and pressure sensor}
+}
+
+@online{Fritzing:online,
+   title = {Fritzing},
+   date = {2020},
+   url = {https://fritzing.org},
+   organization = {Interaction Design Lab Potsdam},
+   note = {Fritzing Software - design of electronics hardware}
+}
+
+@online{MongoDB:online,
+   title = {MongoDB},
+   date = {2020},
+   url = {https://docs.mongodb.com/manual},
+   organization = {MongoDB Inc.},
+   note = {MongoDB database manual}
 }
