--- a/egs/smarthome/doc/thesis/tex/sett/abstract.tex
+++ b/egs/smarthome/doc/thesis/tex/sett/abstract.tex
@@ -5,10 +5,10 @@
 \begin{abstract}
 \addchaptertocentry{\abstractname} % Add the abstract to the table of contents
 
-Cílem této bakalářské práce je zkonstruovat senzory postavené na mikročipu \textit{ESP8266}, naprogramovat systém automatické diagnostiky komunikace za účelem detekce chyb a jiných anomálií a data vizuálně zobrazit. Prvním krokem je otestování čidel vhodných pro využití v chytré domácnosti a následná konstrukce fyzických obvodů. Dále je potřeba zprovoznit komunikaci vybraných čidel s mikrokontrolérem ESP8266 a pomocí protokolu \textit{MQTT} zajistit komunikaci senzorů s webovým rozhraním. Významnou částí tohoto projektu je systém automatické diagnostiky, který je založen na principech strojového učení a pomocí klasifikátorů detekuje anomálie. Výstupem tohoto projektu je grafická vizualizace naměřených dat ve formě webové stránky, která poskytuje kromě hodnot měřených veličin informace o stavu jednotlivých čidel. 
+Cílem této bakalářské práce je zkonstruovat senzory postavené na mikročipu \textit{ESP8266}, naprogramovat systém automatické diagnostiky komunikace za účelem detekce chyb a jiných anomálií a data vizuálně zobrazit. Prvním krokem je otestování čidel vhodných pro využití v chytré domácnosti a následná konstrukce fyzických obvodů. Dále byla zprovozněna komunikace vybraných čidel s mikrokontrolérem ESP8266 a pomocí protokolu \textit{MQTT} zajištěna komunikace senzorů s webovým rozhraním. Významnou částí tohoto projektu je systém automatické diagnostiky, který je založen na principech strojového učení a pomocí klasifikátorů detekuje anomálie. Výstupem tohoto projektu je grafická vizualizace naměřených dat ve formě webové stránky, která poskytuje kromě hodnot měřených veličin informace o stavu jednotlivých čidel. 
 
 \begin{abstract_en}
-The aim of the bachelor thesis is to construct a few \textit{ESP8266}-based sensors and to develop a tool for an automatic communication diagnostics and outlier detection. The first step is to choose specific sensors and test them in order to determine their suitability for this project. For each of them is built an integrated circuit and developed a communication channel between microchips and the \textit{MQTT} server. The key part of the project is an autonomous diagnostic system based on the principles of unsupervised machine learning, which classifies the sensory data in order to detect anomalies. The outcome of this project is a grafical visualisation which is implemented through a web page. The web page provides an organized summary of all measured quantities and gives an overview of conditions of each sensors. 
+The aim of the bachelor thesis is to construct several \textit{ESP8266}-based sensors and to develop a tool for an automatic communication diagnostics and outlier detection. The first step is to choose specific sensors and to test them in order to determine their suitability for this project. For each of them an integrated circuit is built and a communication channel between microchips and the \textit{MQTT} server is developed. The key part of the project is an autonomous diagnostic system based on the principles of unsupervised machine learning which classifies the sensory data in order to detect anomalies. The outcome of this project is a grafical visualisation which is implemented as a web page. The web page provides an organized summary of all measured quantities and gives a status overview for each sensor.
 \end{abstract_en}
 
 \end{abstract}
