--- a/egs/smarthome/doc/thesis/tex/sett/lists.tex
+++ b/egs/smarthome/doc/thesis/tex/sett/lists.tex
@@ -18,7 +18,7 @@
 
 \begin{abbreviations}{ll} % Include a list of abbreviations (a table of two columns)
 \textbf{IoT} & \textbf{I}nternet \textbf{o}f \textbf{T}hings (internet věcí)\\
-\textbf{RPi} & \textbf{R}aspberry \textbf{P}i \\
+\textbf{RPi} & \textbf{R}aspberry \textbf{Pi} \\
 \textbf{ESP8266} & Použitý mikročip (mikrokontrolér) \\
 \textbf{NodeMCU} & Vývojová platforma s čipem ESP8266 \\
 \textbf{Čidlo} & Komponenta k mikročipu (např.: vlhkoměr DHT11) \\
