--- a/egs/smarthome/doc/thesis/tex/sett/preamble.tex
+++ b/egs/smarthome/doc/thesis/tex/sett/preamble.tex
@@ -47,6 +47,9 @@ hidelinks,
 
 \addbibresource{bib/thesis_bibliography.bib} 				% The filename of the bibliography
 
+\setcounter{biburllcpenalty}{7000}
+\setcounter{biburlucpenalty}{8000}
+
 % Required to generate language-dependent quotes in the bibliography
 \usepackage[autostyle=true]{csquotes}
 
