--- a/egs/smarthome/doc/thesis/tex/sett/bibliography.tex
+++ b/egs/smarthome/doc/thesis/tex/sett/bibliography.tex
@@ -1,8 +1,9 @@
+\printbibliography[heading=bibintoc, title={Literatura}]
 \nocite{Wikipedia:online}
-\nocite{sklearn_api}
 \nocite{Hradla-Volty:book}
+\nocite{Fritzing:online}
 %\printbibliography[heading=bibintoc, title={Bibliography}]	
-\printbibliography[heading=bibintoc, title={Literatura}]	% Bibliography
+%\printbibliography[heading=bibintoc, title={Literatura}]
 %\printbibheading[heading=bibintoc,title={Bibliography}]
 %\printbibliography[type=book,heading=subbibliography,title={Book Sources}]
 %\printbibliography[type=article,heading=subbibliography,title={Article Sources}]
